<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/activity_main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context="com.example.android.library.MainActivity">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_weight="1"
            android:scaleType="centerCrop"
            android:src="@drawable/library" />
        <LinearLayout
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:layout_weight="0"
            android:orientation="vertical"
            android:paddingBottom="10dp">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="cursive"
            android:text="@string/mark_library"
            android:textAlignment="center"
            android:textColor="@color/textColor"
            android:textSize="45sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="cursive"
            android:text="@string/sell_books"
            android:textAlignment="center"
            android:textColor="@color/textColor"
            android:textSize="25sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:fontFamily="cursive"
            android:text="@string/contact_information"
            android:textColor="@color/textColor"
            android:textSize="25sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="90dp"
            android:fontFamily="cursive"
            android:text="@string/adress"
            android:textColor="@color/textColor"
            android:textSize="15sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="90dp"
            android:fontFamily="cursive"
            android:text="@string/email"
            android:textColor="@color/textColor"
            android:textSize="15sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="90dp"
            android:fontFamily="cursive"
            android:text="@string/website"
            android:textColor="@color/textColor"
            android:textSize="15sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="90dp"
            android:fontFamily="cursive"
            android:text="@string/telephone"
            android:textColor="@color/textColor"
            android:textSize="15sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:fontFamily="cursive"
            android:text="@string/opening_times"
            android:textColor="@color/textColor"
            android:textSize="25sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="90dp"
            android:fontFamily="cursive"
            android:text="@string/scheduleMondaySaturday"
            android:textColor="@color/textColor"
            android:textSize="15sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="90dp"
            android:fontFamily="cursive"
            android:text="@string/scheduleSunday"
            android:textColor="@color/textColor"
            android:textSize="15sp" />
        </LinearLayout>
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_weight="0"
            android:scaleType="fitCenter"
            android:src="@drawable/icon"
            android:background="@color/background"/>
    </LinearLayout>
</ScrollView>